--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.6",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "fastify-cookie": "^5.3.1",
     "fastify-csrf": "^3.1.0",
     "fastify-helmet": "^5.3.2",
