--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.6",
+    "@nestjs/terminus": "^8.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fastify-cookie": "^5.3.1",
