--- a/package.json
+++ b/package.json
@@ -26,11 +26,18 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.6",
     "@nestjs/terminus": "^8.0.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.25.0",
+    "@opentelemetry/exporter-jaeger": "^0.24.0",
+    "@opentelemetry/exporter-prometheus": "^0.24.0",
+    "@opentelemetry/sdk-node": "^0.24.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fastify-cookie": "^5.3.1",
     "fastify-csrf": "^3.1.0",
     "fastify-helmet": "^5.3.2",
+    "nestjs-otel": "^2.4.0",
+    "nestjs-pino": "^2.2.0",
+    "pino-http": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
