--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.6",
+    "@nestjs/swagger": "^5.0.9",
     "@nestjs/terminus": "^8.0.0",
     "@opentelemetry/auto-instrumentations-node": "^0.25.0",
     "@opentelemetry/exporter-jaeger": "^0.24.0",
@@ -35,6 +36,7 @@
     "fastify-cookie": "^5.3.1",
     "fastify-csrf": "^3.1.0",
     "fastify-helmet": "^5.3.2",
+    "fastify-swagger": "^4.12.0",
     "nestjs-otel": "^2.4.0",
     "nestjs-pino": "^2.2.0",
     "pino-http": "^5.7.0",
